# goldilocks-ntt-hdl

./: Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
benches/: ntt_2_24.rs
src/: error.rs  lib.rs
src/field/: element.rs  mod.rs  roots.rs
src/golden/: mod.rs  reference.rs
src/graph/: mod.rs  ntt_graph.rs
src/hdl/: babybear_field_hdl.rs  butterfly.rs  common.rs  delay.rs  field_hdl.rs  goldilocks_field_hdl.rs  goldilocks_reduce.rs  mod.rs  pipeline.rs  stage.rs  twiddle.rs
src/hdl/arithmetic/: adder.rs  mod.rs  multiplier.rs  subtractor.rs
src/interpret/: descriptor.rs  hdl_morphism.rs  mod.rs  signal.rs
src/sim/: mod.rs  runner.rs
tests/: babybear_stage.rs  end_to_end.rs  hdl_arith_properties.rs  pipeline_circom.rs  sdf_stage_circom.rs
