[package]
name = "goldilocks-ntt-hdl"
version = "0.9.1"
edition = "2024"
description = "Field-generic NTT pipeline in hdl-cat (Goldilocks + BabyBear) with comp-cat-rs categorical structure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MavenRain/goldilocks-ntt-hdl"

[dependencies]
comp-cat-rs = "0.5"
hdl-cat = "0.9"
hdl-cat-bits = "0.3"
hdl-cat-circom = "0.6"
hdl-cat-circuit = "0.3"
hdl-cat-error = "0.3"
hdl-cat-ir = "0.3"
hdl-cat-kind = "0.3"
hdl-cat-signal = "0.3"
hdl-cat-sim = "0.3"
hdl-cat-sync = "0.3"
hdl-cat-verilog = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "ntt_2_24"
harness = false

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"

[patch.crates-io]
hdl-cat = { path = "../hdl-cat/crates/hdl-cat" }
hdl-cat-bits = { path = "../hdl-cat/crates/hdl-cat-bits" }
hdl-cat-circom = { path = "../hdl-cat/crates/hdl-cat-circom" }
hdl-cat-circuit = { path = "../hdl-cat/crates/hdl-cat-circuit" }
hdl-cat-error = { path = "../hdl-cat/crates/hdl-cat-error" }
hdl-cat-ir = { path = "../hdl-cat/crates/hdl-cat-ir" }
hdl-cat-kind = { path = "../hdl-cat/crates/hdl-cat-kind" }
hdl-cat-signal = { path = "../hdl-cat/crates/hdl-cat-signal" }
hdl-cat-sim = { path = "../hdl-cat/crates/hdl-cat-sim" }
hdl-cat-sync = { path = "../hdl-cat/crates/hdl-cat-sync" }
hdl-cat-verilog = { path = "../hdl-cat/crates/hdl-cat-verilog" }
